Fixed added comments not showing on specific pages, and added more CSS

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,18 +1,20 @@
-/* Homepage css */
+/* Homepage page */
 * {
     padding: 0;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    color: black;
 }
 
 body {
     padding: 10px;
+    background-color: #90E0EF;
 }
 
 h1 {
     padding: 10px;
     font-size: 50px;
-    color: black;
+    color: #03045E;
 }
 
 h2 {
@@ -23,16 +25,21 @@ h2 {
 a {
     margin-right: 10px;
     text-decoration: none;
-    color: black;
+
 }
 
 button {
     padding: 10px 20px;
     border-radius: 10px;
     font-size: 20px;
+    background-color: #0077B6;
 }
 
-a:hover {
+ul {
+    padding: 10px 10px 0px 10px;
+}
+
+a:hover, .postTitle:hover {
     color: white;
     transition: 0.3s ease;
     
@@ -44,20 +51,17 @@ button:hover {
     cursor: pointer;
 }
 
-/* homepage and dashboard css */ 
-ul {
-    padding: 10px 10px 0px 10px;
-}
-
+/* Homepage and dashboard page */ 
 .headerDiv {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    color: #CAF0F8;
 }
 
 .headerDiv, .footerDiv {
-    background-color: gray;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    background-color: #0077B6;
 }
 
 .links {
@@ -65,7 +69,7 @@ ul {
 }
 
 #websiteTitle {
-    background-color: aquamarine;
+    background-color: #00B4D8;
 }
 
 .footerDiv {
@@ -78,11 +82,15 @@ ul {
     padding: 10px;
     border-radius: 10px;
     border: 3px solid black;
-    background-color: aqua;
+    background-color: #00B4D8;
 }
 
 .postHeader, .postBody {
     margin: 10px;
+}
+
+.postTitle, .postTitleSpecific {
+    display: inline-block;
 }
 
 .postBody {
@@ -90,14 +98,14 @@ ul {
 }
 
 .createButton {
-    margin-top: 10px;
+    margin: 10px 0px 10px 0px;
 }
 
 #createBtn {
     width: 100%;
 }
 
-/* Form login signup css */
+/* Form login signup page */
 .entryDiv, .signUpDiv, .loginDiv {
     font-size: 25px;
     margin-bottom: 10px;
@@ -105,13 +113,9 @@ ul {
 
 .formInput {
     width: 100%;
-    padding: 10px 0px 10px 0px;
+    padding: 10px 0px;
     display: flex;
     font-size: 20px;
-}
-
-.btnDiv {
-    display: flex;
 }
 
 #signUpLink, #loginLink {
@@ -122,4 +126,24 @@ ul {
 #signUpLink:hover, #loginLink:hover {
     color: rgb(1, 1, 161);
     transition: 0.3s ease;
+}
+
+/* edit post page */
+
+.buttonDiv {
+    display: flex;
+}
+
+.editButtons {
+    margin: 10px 10px 10px 0px;
+}
+
+/* specificPost page */
+
+.commentsDiv {
+    margin: 10px 0px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 3px solid black;
+    background-color: #0077B6;
 }
